tests/baselines/reference/argumentsBindsToFunctionScopeArgumentList.errors.txt
==== tests/cases/compiler/argumentsBindsToFunctionScopeArgumentList.ts (1 errors) ====
    var arguments = 10;
    function foo(a) {
        arguments = 10;  /// This shouldnt be of type number and result in error.
        ~~~~~~~~~
!!! argumentsBindsToFunctionScopeArgumentList.ts(3,5): error TS2012: Cannot convert 'number' to 'IArguments':
!!! 	Type 'Number' is missing property 'length' from type 'IArguments'.
    }